examples/testgui/Errors/tool.tbl
;
T1 P1;1/8" End Mill
